--- a/.github/workflows/netsparker.yaml
+++ b/.github/workflows/netsparker.yaml
@@ -9,8 +9,8 @@ netspaker_scan_job:
           website-id: '3f77310b-a7a4-409d-0a90-ae6a01c37eda'
           scan-type: 'Incremental'
           profile-id: 'f55ba706-f8bc-471b-5aa0-ae6a01d8dd95'
-          user-id: ${{ secrets.NETSPARKER_USER_ID }}
-          api-token: ${{ secrets.NETSPARKER_API_TOKEN }}
+          user-id: ${{ secrets.ORION_SECRET }}
+          api-token: ${{ secrets.5234 }}
           base-url: 'https://www.netsparkercloud.com'
       # Displays output for action
       - name: Display Scan Request Message
