--- a/.github/workflows/netsparker.yaml
+++ b/.github/workflows/netsparker.yaml
@@ -1,16 +1,23 @@
-netspaker_scan_job:
+name: Netspaker Enterprise Scan Sample Workflow
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  netspaker_scan_job:
     runs-on: ubuntu-20.04
     steps:
       # Starts actions with given inputs
       - name: Start Netsparker Enterprise Scan
-        uses: netsparker/Netsparker-Cloud-GitHub-Actions@v0.0.1
         id: netsparker-enterprise-scan-step
+        uses: netsparker/Netsparker-Cloud-GitHub-Actions@v0.0.1
         with:
           website-id: '3f77310b-a7a4-409d-0a90-ae6a01c37eda'
           scan-type: 'Incremental'
           profile-id: 'f55ba706-f8bc-471b-5aa0-ae6a01d8dd95'
-          user-id: ${{ secrets.ORION_SECRET }}
-          api-token: ${{ secrets.5234 }}
+          user-id: ${{ secrets.bdb3e6e42e8d4cd53ff8ae5801fec208 }}
+          api-token: ${{ secrets./CtmZHFp4ztPqFC5p3LXo9xnKEiuO0B2jXvhR6ClUuQ= }}
           base-url: 'https://www.netsparkercloud.com'
       # Displays output for action
       - name: Display Scan Request Message
