--- a/.github/workflows/netsparker.yaml
+++ b/.github/workflows/netsparker.yaml
@@ -1,23 +1,16 @@
-name: Netspaker Enterprise Scan Sample Workflow
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  netspaker_scan_job:
+netspaker_scan_job:
     runs-on: ubuntu-20.04
     steps:
       # Starts actions with given inputs
       - name: Start Netsparker Enterprise Scan
-        id: netsparker-enterprise-scan-step
         uses: netsparker/Netsparker-Cloud-GitHub-Actions@v0.0.1
+        id: netsparker-enterprise-scan-step
         with:
           website-id: '3f77310b-a7a4-409d-0a90-ae6a01c37eda'
           scan-type: 'Incremental'
           profile-id: 'f55ba706-f8bc-471b-5aa0-ae6a01d8dd95'
-          user-id: ${{ secrets.bdb3e6e42e8d4cd53ff8ae5801fec208 }}
-          api-token: ${{ secrets.fIT+6HKMO3oio0QbIUYbi3GLq3DTHPv4/FrTZt438zY= }}
+          user-id: ${{ secrets.NETSPARKER_USER_ID }}
+          api-token: ${{ secrets.NETSPARKER_API_TOKEN }}
           base-url: 'https://www.netsparkercloud.com'
       # Displays output for action
       - name: Display Scan Request Message
